--- a/README
+++ b/README
@@ -1,10 +1,9 @@
-PyH by Emmanuel Turlay (turlay@cern.ch)
+PyH by Emmanuel Turlay (emmanuel@turlay.net)
 =======================================
 
 PyH is a simple python module (pyh.py) that lets you 
 generate html output in a convinient and intuitive manner.
-For more instruction go to 
-http://code.google.com/p/pyh
+
 
 Installation
 ============
@@ -17,5 +16,3 @@ Usage
 in your python script :
 
 from pyh import *
-see the online documentation for the rest at
-http://code.google.com/p/pyh
